--- a/index.html
+++ b/index.html
@@ -568,7 +568,9 @@
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
+    <div>
+  <span id="scAdminEntry" role="button" tabindex="0" title="Admin">© 2025 STOLAR CARP · Львів</span>
+    </div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
